[gd_scene load_steps=2 format=3 uid="uid://b5ov8qwxno3yk"]

[ext_resource type="Script" path="res://scripts/scenes/LoginScene.gd" id="1_abc123"]

[node name="LoginScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abc123")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.25, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Discord Clone"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2

[node name="Login" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Login"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
text = "Username:"

[node name="UsernameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter username"

[node name="PasswordLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
text = "Password:"

[node name="PasswordInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter password"
secret = true

[node name="LoginButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="Register" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Register"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Register/VBoxContainer"]
layout_mode = 2
text = "Username:"

[node name="UsernameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Register/VBoxContainer"]
layout_mode = 2
placeholder_text = "Choose username (min 3 chars)"

[node name="EmailLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Register/VBoxContainer"]
layout_mode = 2
text = "Email:"

[node name="EmailInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Register/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter email"

[node name="PasswordLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Register/VBoxContainer"]
layout_mode = 2
text = "Password:"

[node name="PasswordInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Register/VBoxContainer"]
layout_mode = 2
placeholder_text = "Choose password (min 6 chars)"
secret = true

[node name="ConfirmLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Register/VBoxContainer"]
layout_mode = 2
text = "Confirm Password:"

[node name="ConfirmPasswordInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Register/VBoxContainer"]
layout_mode = 2
placeholder_text = "Confirm password"
secret = true

[node name="RegisterButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Register/VBoxContainer"]
layout_mode = 2
text = "Create Account"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = " "
horizontal_alignment = 1
visible = false
